--- a/CMS/appsettings.json
+++ b/CMS/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DatabaseSettings": {
+    "UseJsonDb": true,
+    "JsonFilePath": "c://ContactsJson//ContactsJson.json"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Your SQL Server connection string here"
+  }
+
 }
