Fixes releated to dbcontext. added support to add sqlserver easily.

--- a/CMS.DataLayer/appsettings.Development.json
+++ b/CMS.DataLayer/appsettings.Development.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "DatabaseSettings": {
     "UseJsonDb": true,
-    "JsonFilePath": "path/to/jsonfile",
+    "JsonFilePath": "contacts.json",
     "DefaultConnection": "Data Source=server;Initial Catalog=db;User Id=user;Password=pass;"
   }
 }
