--- a/CMS.UnitTests/CMS.UnitTests.csproj
+++ b/CMS.UnitTests/CMS.UnitTests.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="UnitOfWorkTests\**" />
+    <EmbeddedResource Remove="UnitOfWorkTests\**" />
+    <None Remove="UnitOfWorkTests\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
     <PackageReference Include="Moq" Version="4.20.72" />
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
@@ -21,7 +27,6 @@
     <ProjectReference Include="..\CMS.Repositories\CMS.Repositories.csproj" />
     <ProjectReference Include="..\CMS.Services\CMS.Services.csproj" />
     <ProjectReference Include="..\CMS\CMS.csproj" />
-    <ProjectReference Include="..\UnitOfWork\CMS.UnitOfWork.csproj" />
   </ItemGroup>
 
 </Project>
